# rlsbl

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.rlsbl/: hashes.json
.rlsbl/bases/: CLAUDE.md
.rlsbl/hooks/: pre-release.sh
docs/_build/: index.html
rlsbl/: __init__.py  __main__.py  config.py  lock.py  tagging.py  utils.py
rlsbl/commands/: check.py  check_name.py  check_prs.py  config.py  discover.py  docs_cmd.py  init_cmd.py  pre_push_check.py  prs.py  record_gif.py  register_cmd.py  release.py  status.py  targets_cmd.py  undo.py  unreleased.py  watch.py
rlsbl/lib/: __init__.py  config_migrator.py  schema_loader.py
rlsbl/registries/: __init__.py  go.py  npm.py  pypi.py
rlsbl/targets/: __init__.py  base.py  codehome.py  go.py  npm.py  protocol.py  pypi.py
scripts/: gen-logo-svg.py  record-gif.sh
templates/merged/: publish.yml.tpl
templates/npm/: ci.yml.tpl  publish.yml.tpl
templates/pypi/: ci.yml.tpl  publish.yml.tpl
templates/shared/: CHANGELOG.md.tpl  CLAUDE.md.tpl  gitignore.tpl  pre-release.sh.tpl  (+1 more)
tests/: conftest.py  test_check.py  test_codehome_target.py  test_commands.py  test_config.py  test_config_cmd.py  test_config_migrator.py  test_discover.py  test_docs_cmd.py  test_docs_deploy.py  test_docs_generation.py  test_docs_target.py  test_lib_api.py  test_lock.py  test_pre_push_check.py  test_record_gif.py  test_registries.py  test_scaffold_extras.py  test_scaffold_force.py  test_scaffold_multi.py  test_schema_loader.py  test_scoped_release.py  test_tagging.py  test_targets.py  test_targets_cmd.py  test_undo.py  test_unreleased.py  test_utils.py  test_watch.py
todo/: audit-fixes.md
(+54 files in other folders)
