[project]
name = "rlsbl"
version = "0.3.0"
description = "Release orchestration and project scaffolding for npm and PyPI"
license = "MIT"
authors = [{ name = "smm-h" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["release", "npm", "pypi", "publish", "cli", "scaffold"]

[project.urls]
Repository = "https://github.com/smm-h/rlsbl"

[project.scripts]
rlsbl = "rlsbl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
